# dt-exercises

./: .gitignore
control/exercise_ws/src/lane_control/config/lane_controller_node/: default.yaml
control/exercise_ws/src/lane_control/include/lane_controller/: controller.py
control/exercise_ws/src/lane_control/src/: lane_controller_node.py
control/exercise_ws/src/line_detector/config/line_detector_node/: default.yaml
state_estimation/: Dockerfile  README.md  submission.yaml
state_estimation/exercise_ws/src/edge_point_msgs/: CMakeLists.txt  package.xml
state_estimation/exercise_ws/src/edge_point_msgs/msg/: EdgePoint.msg  EdgePointList.msg
state_estimation/exercise_ws/src/ground_projection/include/ground_projection/: __init__.py
state_estimation/exercise_ws/src/ground_projection/src/: ground_projection_node.py
state_estimation/exercise_ws/src/image_processing/: CMakeCache.txt  CTestConfiguration.ini
state_estimation/exercise_ws/src/image_processing/catkin_generated/: setup_cached.sh
state_estimation/exercise_ws/src/lane_control/config/lane_controller_node/: default.yaml  default.yaml.save
state_estimation/exercise_ws/src/lane_control/include/lane_controller/: controller.py
state_estimation/exercise_ws/src/lane_control/src/: lane_controller_node.py
state_estimation/exercise_ws/src/lane_filter/: CMakeLists.txt  package.xml
state_estimation/exercise_ws/src/lane_filter/src/: lane_filter_node.py
state_estimation/exercise_ws/src/line_detector/src/: line_detector_node.py
(+4 files in other folders)
