<?xml version="1.0"?>
<package>
  <name>edge_point_msgs</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `custom_msgs` in `package.xml`.</description>

  <maintainer email="olga.xu@umontreal.ca">Olga Luo</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>duckietown_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>duckietown_msgs</run_depend>

  <export>
  </export>
</package>
